--- a/sale_customization/views/approval.xml
+++ b/sale_customization/views/approval.xml
@@ -26,11 +26,35 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='partner_id']" position="after">
-                    <field name="is_sales_manager"/>
+                    <field name="is_sales_manager" invisible="1"/>
                 </xpath>
-                <xpath expr="//field[@name='payment_term_id']" position="attributes">
-                    <attribute name="attrs">{'readonly': [('is_sales_manager', '=', False)]}</attribute>
-                </xpath>
+            </field>
+        </record>
+        <record id="stock_picking_form_view_invoice_button" model="ir.ui.view">
+            <field name="name">stock.picking.form.invoice.button</field>
+            <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock.view_picking_form"/>
+            <field name="arch" type="xml">
+            <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']"
+                           position="after">
+                <field name="description"/>
+            </xpath>
+
+            </field>
+        </record>
+        <record id="account_move_form_view_invoice_button" model="ir.ui.view">
+            <field name="name">account.move.form.invoice.button</field>
+            <field name="model">account.move</field>
+            <field name="inherit_id" ref="account.view_move_form"/>
+            <field name="arch" type="xml">
+            <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='product_id']"
+                           position="after">
+                <field name="description"/>
+            </xpath>
+            <xpath expr="//field[@name='line_ids']/tree/field[@name='name']"
+                           position="after">
+                <field name="description"/>
+            </xpath>
             </field>
         </record>
     </data>
