--- a/sale_customization/views/partner.xml
+++ b/sale_customization/views/partner.xml
@@ -8,8 +8,30 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='vat']" position="after">
                     <field name="customer_state"/>
-                    <field name="last_invoice_date"/>
+                    <field name="last_invoice_date" invisble="1"/>
+                    <field name="is_sales_manager" invisble="1"/>
+                    <field name="credit_limit" attrs="{'readonly':[('is_sales_manager','!=',True)]}"/>
                 </xpath>
+                <xpath expr="//group/group/field[@name='property_payment_term_id']" position="attributes">
+                    <attribute name="attrs">{'readonly': [('parent.is_sales_manager', '!=', True)]}</attribute>
+                </xpath>
+                <xpath expr="//field[@name='user_id']" position="attributes">
+                    <attribute name="attrs">{'readonly': [('parent.is_sales_manager', '!=', True)]}</attribute>
+                </xpath>
+            </field>
+        </record>
+        <record id="res_company_form_inherit" model="ir.ui.view">
+            <field name="name">res.company.form.inherited</field>
+            <field name="model">res.company</field>
+            <field name="inherit_id" ref="base.view_company_form"/>
+            <field name="arch" type="xml">
+                <notebook colspan="4" position="inside">
+                    <page string="Order Limit">
+                        <group>
+                            <field name="max_order_amount"/>
+                        </group>
+                    </page>
+                </notebook>
             </field>
         </record>
     </data>
