--- a/sale_customization/views/approval.xml
+++ b/sale_customization/views/approval.xml
@@ -9,9 +9,23 @@
                 <xpath expr="//field[@name='partner_id']" position="after">
                     <field name="is_sales_manager" invisible="1"/>
                     <field name="customer_state" invisible="1"/>
+                    <field name="cancelled_reason"
+                           readonly="1"
+                           attrs="{'invisible': [('cancelled_reason', '=', False)]}"
+                    />
                 </xpath>
                 <xpath expr="//header/field[@name='state']" position="replace">
                     <field name="state" widget="statusbar" statusbar_visible="draft,sent,approve,sale"/>
+                </xpath>
+                <xpath expr="//header/button[@name='action_cancel']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+<!--                                    <button name="action_cancel" type="object" string="Cancel" attrs="{'invisible': ['|', ('state', 'not in', ['draft', 'sent','sale']), ('id', '=', False)]}" data-hotkey="z"/>-->
+
+                </xpath>
+                <xpath expr="//header/button[@name='action_quotation_send']" position="after">
+                      <button name="action_custom_cancel" type="object" string="Cancel"
+                              attrs="{'invisible': ['|', ('state', 'not in', ['draft', 'sent','sale','approve']), ('id', '=', False)]}"
+                               class="btn-danger"/>
                 </xpath>
                 <xpath expr="//header/button[@name='action_quotation_send']" position="before">
 
@@ -29,6 +43,7 @@
                 <xpath expr="//button[@name='action_confirm']" position="attributes">
                     <attribute name="attrs">{'invisible': [('state', 'not in', ['sent','approve'])]}</attribute>
                 </xpath>
+
 
                 <xpath expr="//field[@name='partner_id']" position="after">
                     <field name="customer_state" invisible="0"/>
