[UPDATE]: REMOVED SELECTION WIDGET FROM PRODUCT_ID IN SALE ORDER LINES

--- a/kg_sale/views/sale_order.xml
+++ b/kg_sale/views/sale_order.xml
@@ -294,7 +294,7 @@
                            position="replace">
 
 
-                        <field name="product_id" widget="selection"
+                        <field name="product_id"
                                domain="[('categ_id','=',kg_categ_id),('kg_brand_id','=',kg_brand_id)]"/>
 
                     </xpath>
