--- a/partner_statement/views/outstanding_statement.xml
+++ b/partner_statement/views/outstanding_statement.xml
@@ -263,7 +263,7 @@
                                         <span t-esc="'{0:,.2f}'.format(line['amount'])"
                                         />
                                     </td>
-                                  <td class="amount">
+                                    <td class="amount">
                                         <t t-set="payment_received" t-value="line['amount'] - line['open_amount']"/>
                                         <span t-esc="'{0:,.2f}'.format(payment_received)"/>
                                     </td>
@@ -441,16 +441,9 @@
     </record>
 
     <record id="action_print_outstanding_statement" model="ir.actions.report">
-<!--        <field name="name">Outstanding Statement</field>-->
+        <field name="name">Outstanding Statement</field>
         <field name="model">res.partner</field>
         <field name="report_name">partner_statement.outstanding_statement</field>
-<!--        <field name="print_report_name">-->
-<!--            'Outstandingeeeeeeeeeeeeeeeeeeee statement - %s' % (object.name)-->
-<!--        </field>-->
-        <!--        <field name="print_report_name">(object.state in ('draft', 'sent') and 'Quotation - %s' % (object.name)) or-->
-        <!--            'Order - %s' % (object.name)-->
-        <!--        </field>-->
-
         <field name="report_type">qweb-pdf</field>
         <field name="report_file">partner_statement.outstanding_statement</field>
         <field name="paperformat_id" ref="partner_statement.outstanding_paper_format_alan"></field>
